Fix broadcast player list horizontal scroll on mobile
Fixes #19737 by wrapping the games list table in a container with overflow-x: auto.

--- a/ui/analyse/css/study/relay/_tour.scss
+++ b/ui/analyse/css/study/relay/_tour.scss
@@ -626,6 +626,10 @@ $hover-bg: $m-primary_bg--mix-30;
       @extend %tour-margin-horiz;
     }
 
+    &__games-wrap {
+      overflow: auto;
+    }
+
     &__cards {
       @extend %tour-margin-horiz;
 
